--- a/templates/endtest.html
+++ b/templates/endtest.html
@@ -6,7 +6,7 @@
     
     <div class="container mx-5 my-5">
         <h2>Your Test was submitted Successfully!! You can now close this window</h2>
-        <h2>Your score is 100/100</h2>
+        <h2>Your score is {{ context.score }}/20</h2>
     </div>
     <script>
         localStorage.clear()
