--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     
 <div class="container mx-5 my-5 ">
   <h1 id="word"></h1>
+  <h1 id="score"></h1>
+  <h1 id="guess"></h1>
   <h4>Your Camera</h4>
   <img style="border: 10px solid black" src="{{ url_for('video') }}" width="60%"/>
 
