Changes in Flask APP

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                         to go back to main screen of the application.
                     </li>
                     <li>There is no time limit for this test. You are solely judged on typing</li>
-                    <li>You are advised to sit in a plain background with proper light source in your front</li>
+                    <li>You are advised to sit in front of a plain background in a well lit surrounding.</li>
             
                 </ol>
             </div>
