--- a/templates/base.html
+++ b/templates/base.html
@@ -8,23 +8,23 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Handwriting Recognition Module</title>
+    <title>Spelling Orientation Test</title>
   </head>
-  <body>
+  <body class="text-light bg-dark">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"><h4 class="font-weight-bold">Handwriting Recognition Test</h4> </a>
+        <a class="navbar-brand" href="#"><h4 class="font-weight-bold">Spelling Orientation Test</h4> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active font-weight-bold h5" href="#">Return to Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active font-weight-bold h5" href="/">Return to Home <span class="sr-only">(current)</span></a>
 
         </div>
         <div class="navbar-nav mx-3">
             <!-- Button trigger modal -->
-<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal">
+<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal" >
     Instructions for the Test 
   </button>
         </div>
@@ -32,7 +32,7 @@
       </nav>
 
 
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
