--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,17 @@
   
 
     
-<div class="container mx-5 my-5 ">
+<div class="container" style="margin-left: 200px; margin-top: 50px;">
   <h1 id="word"></h1>
   <h1 id="score"></h1>
   <h1 id="guess"></h1>
   <h4>Your Camera</h4>
-  <img style="border: 10px solid black" src="{{ url_for('video') }}" width="60%"/>
+  <img style="border: 10px solid black" src="{{ url_for('video') }}" width="70%"/>
 
 
-</div>
-<br>
+<br>  
+
+<div style="margin-top: 50px;">
 <button id="pronounce" onclick="speak();" class="btn btn-primary btn-large mx-5">Pronounce Word</button>
 <button id="next" onclick="next_word();" class="btn btn-warning btn-large mx-2">Next Word</button>
 
@@ -24,8 +25,14 @@
 <div id="load1" class="spinner-border mx-5" role="status">
   <span class="sr-only">Loading...</span>
 </div>
+
+</div>
+
+
+
 <h5 id="load2" class="mx-5 my-2">Please wait while we are evaluating your writing</h5>
 
+</div>
 
 
 {% endblock body %}
